--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,1 +1,11 @@
 spring.application.name=nongame-backend
+
+spring.config.import=optional:file:.env[.properties]
+
+# Database connection settings
+spring.datasource.url=jdbc:mysql://${DB_HOST}:${DB_PORT}/${DB_NAME}
+spring.datasource.username=${DB_USER}
+spring.datasource.password=${DB_PASS}
+
+# Hibernate DDL auto (create, create-drop, update)
+spring.jpa.hibernate.ddl-auto=update
