--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -9,3 +9,6 @@ spring.datasource.password=${DB_PASS}
 
 # Hibernate DDL auto (create, create-drop, update)
 spring.jpa.hibernate.ddl-auto=update
+
+# Auth
+jwt.secret=${JWT_SECRET}
